Complete overhaul for Gutenberg 14.0.

--- a/assets/blocks/core/code.css
+++ b/assets/blocks/core/code.css
@@ -1,1 +1,1 @@
-.wp-block-code>code{overflow-wrap:normal;overflow-x:scroll;tab-size:4;white-space:pre}
+.wp-block-code>code{overflow-wrap:normal;overflow-x:scroll;tab-size:4;white-space:pre !important}.wp-block-code.is-style-wrap>code{white-space:pre-wrap !important}
