--- a/assets/blocks/core/group.css
+++ b/assets/blocks/core/group.css
@@ -1,71 +1,1 @@
-/* Group Block
------------------------------------------------------------------------------ */
-/* General Styles
---------------------------------------------- */
-/* Remove the auto-padding added to Groups with background colors applied. */
-.wp-block-group:where(.has-background) {
-  padding: 0;
-}
-
-/*
- * Fixes bug when a block is aligned left/right in Groups.
- * Reference: https://github.com/WordPress/gutenberg/issues/39344
- *
- * This causes issues with fullWidth groups, so removing for now.
- */
-/* .wp-block-group {
-    overflow-x: auto;
-} */
-/* Block Style: Hover Box
- *
- * This style is not directly accessible in the UI.
---------------------------------------------- */
-.wp-block-group.is-style-hover-box {
-  box-shadow: var(--wp--custom--box-shadow--minimal);
-}
-
-@media (min-width: 600px) {
-  .wp-block-group.is-style-hover-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .wp-block-group.is-style-hover-box > *:not(.wp-block-buttons):not(.wp-block-read-more) {
-    transform: translateY(1.75rem);
-    transition: all 0.2s ease-in-out;
-  }
-  .wp-block-group.is-style-hover-box > .wp-block-buttons,
-.wp-block-group.is-style-hover-box > .wp-block-read-more {
-    opacity: 0;
-    transition: all 0.2s ease-in-out;
-  }
-  .wp-block-group.is-style-hover-box:hover {
-    box-shadow: var(--wp--custom--box-shadow--default);
-  }
-  .wp-block-group.is-style-hover-box:hover > *:not(.wp-block-buttons):not(.wp-block-read-more) {
-    transform: translateY(0);
-  }
-  .wp-block-group.is-style-hover-box:hover > .wp-block-buttons,
-.wp-block-group.is-style-hover-box:hover > .wp-block-read-more {
-    opacity: 1;
-  }
-}
-/* Block Style: Full Height Stack
- *
- * This style is not directly accessible in the UI.
---------------------------------------------- */
-.wp-block-group.is-style-full-height-stack {
-  height: 100%;
-  justify-content: space-between;
-}
-.wp-block-group.is-style-full-height-stack > .wp-block-group {
-  width: 100%;
-}
-
-.wp-block-group.is-style-80-vh-stack {
-  height: 100vh;
-  justify-content: space-between;
-}
-.wp-block-group.is-style-80-vh-stack > .wp-block-group {
-  width: 100%;
-}
+.wp-block-group.is-style-full-height-stack{height:100%;justify-content:space-between}.wp-block-group.is-style-full-height-stack>.wp-block-group{width:100%}.wp-block-group.is-style-hover-box{box-shadow:var(--wp--custom--box-shadow--minimal)}@media(min-width: 600px){.wp-block-group.is-style-hover-box{display:flex;flex-direction:column;justify-content:space-between}.wp-block-group.is-style-hover-box>*:not(.wp-block-buttons):not(.wp-block-read-more){transform:translateY(1.75rem);transition:all .2s ease-in-out}.wp-block-group.is-style-hover-box>.wp-block-buttons,.wp-block-group.is-style-hover-box>.wp-block-read-more{opacity:0;transition:all .2s ease-in-out}.wp-block-group.is-style-hover-box:hover{box-shadow:var(--wp--custom--box-shadow--default)}.wp-block-group.is-style-hover-box:hover>*:not(.wp-block-buttons):not(.wp-block-read-more){transform:translateY(0)}.wp-block-group.is-style-hover-box:hover>.wp-block-buttons,.wp-block-group.is-style-hover-box:hover>.wp-block-read-more{opacity:1}}
