--- a/templates/single.html
+++ b/templates/single.html
@@ -43,13 +43,13 @@
             <!-- wp:group {"style":{"spacing":{"blockGap":"0.75rem"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"}} -->
             <div class="wp-block-group">
 
-                <!-- wp:post-terms {"term":"category","fontSize":"tiny","style":{"typography":{"fontWeight":"500","letterSpacing":"1px","textTransform":"uppercase","lineHeight":"1"}}} /-->
+                <!-- wp:post-terms {"term":"category","fontSize":"x-small","style":{"typography":{"fontWeight":"500","letterSpacing":"1px","textTransform":"uppercase","lineHeight":"1"}}} /-->
 
-                <!-- wp:paragraph {"textColor":"neutral-300","fontSize":"tiny","fontFamily":"source-sans"} -->
-                <p class="has-neutral-300-color has-tiny-font-size has-source-sans-font-family">|</p>
+                <!-- wp:paragraph {"textColor":"neutral-300","fontSize":"x-small","fontFamily":"source-sans"} -->
+                <p class="has-neutral-300-color has-x-small-font-size has-source-sans-font-family">|</p>
                 <!-- /wp:paragraph -->
 
-                <!-- wp:post-date {"format":"F j, Y","style":{"typography":{"letterSpacing":"1px","textTransform":"uppercase","fontWeight":"500","lineHeight":"1"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"tiny"} /-->
+                <!-- wp:post-date {"format":"F j, Y","style":{"typography":{"letterSpacing":"1px","textTransform":"uppercase","fontWeight":"500","lineHeight":"1"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"x-small"} /-->
 
             </div>
             <!-- /wp:group -->
@@ -74,8 +74,8 @@
 
         <!-- wp:group {"layout":{"type":"flex","allowOrientation":false,"justifyContent":"space-between"}} -->
         <div class="wp-block-group">
-            <!-- wp:post-terms {"term":"category","separator":"","className":"is-style-outline","fontSize":"tiny"} /-->
-            <!-- wp:post-terms {"term":"post_tag","separator":"   |   ","fontSize":"tiny"} /-->
+            <!-- wp:post-terms {"term":"category","separator":"","className":"is-style-outline","fontSize":"x-small"} /-->
+            <!-- wp:post-terms {"term":"post_tag","separator":"   |   ","fontSize":"x-small"} /-->
         </div>
         <!-- /wp:group -->
     </div>
