--- a/assets/blocks/core/archives.css
+++ b/assets/blocks/core/archives.css
@@ -1,1 +1,1 @@
-ul.wp-block-archives{display:flex;flex-direction:column;gap:.5rem .7rem;padding:0}.wp-block-archives li{color:var(--wp--preset--color--neutral-500);list-style:none;margin:0 !important}.wp-block-archives.is-style-horizontal{flex-direction:row;flex-wrap:wrap}
+ul.wp-block-archives{display:flex;flex-direction:column;gap:.5rem .7rem;padding:0}ul.wp-block-archives li{color:var(--wp--preset--color--primary-light);list-style:none;margin:0 !important}ul.wp-block-archives.is-style-horizontal{flex-direction:row;flex-wrap:wrap}
