--- a/assets/blocks/core/cover.css
+++ b/assets/blocks/core/cover.css
@@ -1,8 +1,1 @@
-/* Cover Block
------------------------------------------------------------------------------ */
-/* General Styles
---------------------------------------------- */
-/* Fix an issue when there are child flex blocks */
-.wp-block-cover .block-editor-block-list__layout.is-layout-flex {
-  width: auto;
-}
+.wp-block-cover .block-editor-block-list__layout.is-layout-flex{width:auto}.wp-block-cover.is-style-slide{border-bottom:1px solid var(--wp--preset--color--primary-light);min-height:calc(100vh + 1px) !important}.wp-block-cover.is-style-slide .wp-block-cover__inner-container{align-self:stretch;display:flex;flex-direction:column}@media(max-width: 782px){.wp-block-cover.is-style-slide{border-bottom:0px;min-height:auto !important}}
