--- a/assets/blocks/core/post-comments-form.css
+++ b/assets/blocks/core/post-comments-form.css
@@ -1,33 +1,1 @@
-/* Post Comments Form Block
- * (Currently not used until the Comments Loop is more stable)
------------------------------------------------------------------------------ */
-/* General Styles
---------------------------------------------- */
-.wp-block-post-comments-form {
-  font-size: var(--wp--preset--font-size--small);
-}
-.wp-block-post-comments-form .comment-reply-title {
-  font-size: var(--wp--preset--font-size--x-large);
-}
-.wp-block-post-comments-form .comment-reply-title small {
-  display: block;
-  font-size: var(--wp--preset--font-size--medium);
-  font-weight: 400;
-  margin-top: 0.4rem;
-}
-.wp-block-post-comments-form .comment-form-cookies-consent {
-  align-items: center;
-  font-size: var(--wp--preset--font-size--small);
-}
-.wp-block-post-comments-form .comment-form-cookies-consent #wp-comment-cookies-consent {
-  margin: 0 0.5rem 0 0;
-}
-.wp-block-post-comments-form .form-submit.wp-block-button {
-  margin-top: 2rem;
-}
-.wp-block-post-comments-form input:not([type=submit]),
-.wp-block-post-comments-form textarea {
-  border: 1px solid var(--wp--preset--color--neutral-300);
-  border-radius: 4px;
-  font-size: var(--wp--preset--font-size--small);
-}
+.wp-block-post-comments-form{font-size:var(--wp--preset--font-size--small)}.wp-block-post-comments-form .comment-form{display:flex;flex-direction:column;margin-top:var(--wp--preset--spacing--medium)}.wp-block-post-comments-form .comment-form>*{margin-block-start:0;margin-block-end:var(--wp--preset--spacing--small)}.wp-block-post-comments-form .comment-form>*+*{margin-block-start:var(--wp--preset--spacing--small);margin-block-end:0}.wp-block-post-comments-form .comment-reply-title{font-size:var(--wp--preset--font-size--xx-large);margin:0}.wp-block-post-comments-form .comment-reply-title small{display:block;font-size:var(--wp--preset--font-size--medium);font-weight:400;margin-top:.4rem}.wp-block-post-comments-form .comment-form-cookies-consent{align-items:center}.wp-block-post-comments-form .comment-form-cookies-consent label{font-size:var(--wp--preset--font-size--small)}.wp-block-post-comments-form .comment-form-cookies-consent #wp-comment-cookies-consent{margin:0 .5rem 0 0}.wp-block-post-comments-form .form-submit.wp-block-button{margin-top:var(--wp--preset--spacing--medium)}.wp-block-post-comments-form input:not([type=submit]),.wp-block-post-comments-form textarea{border:var(--wp--custom--border--default);font-size:var(--wp--preset--font-size--small)}
