--- a/assets/blocks/core/post-content.css
+++ b/assets/blocks/core/post-content.css
@@ -1,9 +1,1 @@
-/* Post Contents Block
------------------------------------------------------------------------------ */
-/* General Styles
---------------------------------------------- */
-/* Add some extra spacing around images, galleries, and code blocks */
-.wp-block-post-content > .wp-block-code, .wp-block-post-content > .wp-block-gallery, .wp-block-post-content > .wp-block-image {
-  margin-block-start: calc(1.5 * var(--wp--custom--spacing--gap));
-  margin-block-end: calc(1.5 * var(--wp--custom--spacing--gap));
-}
+.editor-styles-wrapper .is-root-container>.wp-block-code,.editor-styles-wrapper .is-root-container>.wp-block-gallery,.editor-styles-wrapper .is-root-container>.wp-block-image,.wp-block-post-content>.wp-block-code,.wp-block-post-content>.wp-block-gallery,.wp-block-post-content>.wp-block-image{margin-block-start:var(--wp--preset--spacing--large);margin-block-end:var(--wp--preset--spacing--large)}.editor-styles-wrapper .is-root-container>h1:not(:first-child),.editor-styles-wrapper .is-root-container>h2:not(:first-child),.editor-styles-wrapper .is-root-container>h3:not(:first-child),.editor-styles-wrapper .is-root-container>h4:not(:first-child),.wp-block-post-content>h1:not(:first-child),.wp-block-post-content>h2:not(:first-child),.wp-block-post-content>h3:not(:first-child),.wp-block-post-content>h4:not(:first-child){margin-top:var(--wp--preset--spacing--large)}.editor-styles-wrapper .is-root-container>h1:not(:first-child)+*,.editor-styles-wrapper .is-root-container>h2:not(:first-child)+*,.editor-styles-wrapper .is-root-container>h3:not(:first-child)+*,.editor-styles-wrapper .is-root-container>h4:not(:first-child)+*,.wp-block-post-content>h1:not(:first-child)+*,.wp-block-post-content>h2:not(:first-child)+*,.wp-block-post-content>h3:not(:first-child)+*,.wp-block-post-content>h4:not(:first-child)+*{margin-top:var(--wp--preset--spacing--small)}
