--- a/assets/blocks/core/post-terms.css
+++ b/assets/blocks/core/post-terms.css
@@ -1,33 +1,1 @@
-/* Post Terms Block
------------------------------------------------------------------------------ */
-.wp-block-post-terms {
-  /* Block Style: Outline
-  --------------------------------------------- */
-}
-.wp-block-post-terms a {
-  text-decoration: none;
-}
-.wp-block-post-terms a:hover {
-  text-decoration: underline;
-}
-.wp-block-post-terms .wp-block-post-terms__separator {
-  color: var(--wp--preset--color--neutral-300);
-}
-.wp-block-post-terms.is-style-outline a {
-  border: 1px solid var(--wp--preset--color--neutral-300);
-  border-radius: var(--wp--custom--border-radius--default);
-  color: var(--wp--preset--color--primary-light);
-  display: inline-block;
-  line-height: var(--wp--custom--typography--line-height--tiny);
-  padding: 0.6em 1.2em;
-  text-decoration: none;
-}
-.wp-block-post-terms.is-style-outline a:hover {
-  background-color: var(--wp--preset--color--primary);
-  border-color: var(--wp--preset--color--primary);
-  color: var(--wp--preset--color--neutral);
-}
-.wp-block-post-terms.is-style-outline .wp-block-post-terms__separator {
-  margin-left: 0.4em;
-  margin-right: 0.4em;
-}
+.wp-block-post-terms a{text-decoration:none}.wp-block-post-terms a:hover{text-decoration:underline}.wp-block-post-terms .wp-block-post-terms__separator{color:var(--wp--preset--color--primary-light);margin-right:.2em}.wp-block-post-terms.is-style-outline a{border:var(--wp--custom--border--default);border-radius:var(--wp--custom--border-radius--default);color:var(--wp--preset--color--primary);display:inline-block;line-height:1;padding:.85em 1.2em .8em;text-decoration:none}.wp-block-post-terms.is-style-outline a:hover{background-color:var(--wp--preset--color--primary);border-color:var(--wp--preset--color--primary);color:var(--wp--preset--color--neutral)}.wp-block-post-terms.is-style-outline .wp-block-post-terms__separator{margin-left:.4em;margin-right:.4em}
