--- a/assets/blocks/core/query-title.css
+++ b/assets/blocks/core/query-title.css
@@ -1,13 +1,1 @@
-/* Query Title Block
------------------------------------------------------------------------------ */
-.wp-block-query-title {
-  /* Custom styling for the title prefix. The prefix class is added manually in functions.php */
-}
-.wp-block-query-title .query-title-prefix {
-  color: var(--wp--preset--color--primary-light);
-  display: block;
-  margin-bottom: 1rem;
-  font-size: var(--wp--preset--font-size--medium);
-  font-weight: 500;
-  text-transform: uppercase;
-}
+.wp-block-query-title .query-title-prefix{color:var(--wp--preset--color--primary-light);display:block;margin-bottom:1rem;font-size:var(--wp--preset--font-size--medium);font-weight:500;text-transform:uppercase}
