--- a/src/blocks/core/buttons.scss
+++ b/src/blocks/core/buttons.scss
@@ -1,112 +1,108 @@
-/* Buttons Block
------------------------------------------------------------------------------ */
+/* Buttons
+ ----------------------------------------------------------------------------- */
 
-/* Custom styles for when inline-code is placed in buttons */
-.editor-styles-wrapper .wp-block-button .wp-block-button__link > code,
-.wp-block-button .wp-block-button__link > code {
-    color: inherit;
-    background-color: transparent;
-    font-size: .8em;
-    letter-spacing: 0;
-    opacity: .6;
-    padding: 0;
-    text-transform: none;
-}
+.editor-styles-wrapper .wp-block-button,
+.wp-block-button {
+    // Custom styles for when inline-code is placed in buttons.
+    .wp-block-button__link > code {
+        color: inherit;
+        background-color: transparent;
+        font-size: .8em;
+        letter-spacing: 0;
+        opacity: 0.6;
+        padding: 0;
+        text-transform: none;
+    }
 
-/* Block Style: Filled
---------------------------------------------- */
-.wp-block-button:not(.is-style-outline) .wp-block-button__link:hover,
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-primary-background-color:hover {
-    background-color: var(--wp--preset--color--primary-light) !important;
-}
+    /* Block Style: Filled
+     --------------------------------------------- */
+     
+    &:not(.is-style-outline) .wp-block-button__link {
+        &.has-secondary-background-color:hover {
+            background-color: var(--wp--preset--color--secondary-light) !important;
+        }
 
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-secondary-background-color:hover {
-    background-color: var(--wp--preset--color--secondary-light) !important;
-}
+        &.has-tertiary-background-color:hover {
+            background-color: var(--wp--preset--color--tertiary-light) !important;
+        }
 
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-tertiary-background-color:hover {
-    background-color: var(--wp--preset--color--tertiary-light) !important;
-}
+        // Accent, info, and warning colors do not have light variants, so just use opacity.
+        &.has-accent-background-color:hover,
+        &.has-info-background-color:hover,
+        &.has-warning-background-color:hover {
+            opacity: 0.8;
+        }
+        
+        &.has-accent-background-color:hover {
+            background-color: var(--wp--preset--color--accent) !important;
+        }
 
-/*
- * Accent, info, and warning colors do not have light variants, so just use
- * opacity.
- */
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-accent-background-color:hover {
-    background-color: var(--wp--preset--color--accent) !important;
-    opacity: 0.8;
-}
+        &.has-info-background-color:hover {
+            background-color: var(--wp--preset--color--info) !important;
+        }
 
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-info-background-color:hover {
-    background-color: var(--wp--preset--color--info) !important;
-    opacity: 0.8;
-}
+        &.has-warning-background-color:hover {
+            background-color: var(--wp--preset--color--warning) !important;
+        }
 
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-warning-background-color:hover {
-    background-color: var(--wp--preset--color--warning) !important;
-    opacity: 0.8;
-}
+        &.has-neutral-background-color:hover {
+            background-color: var(--wp--preset--color--neutral-300) !important;
+        }
+    }
 
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-warning-background-color:hover {
-    background-color: var(--wp--preset--color--warning) !important;
-    opacity: 0.8;
-}
+    /* Block Style: Outline
+     --------------------------------------------- */
 
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-neutral-background-color:hover {
-    background-color: var(--wp--preset--color--neutral-300) !important;
-}
+    &.is-style-outline .wp-block-button__link {
+        // This forces buttons with outline styling to inherit the color of the button.
+        // This is needed due to our button styling in theme.json.
+        border-color: inherit;
 
+        &:hover,
+        &.has-primary-color:hover,
+        &.has-secondary-color:hover,
+        &.has-tertiary-color:hover,
+        &.has-accent-color:hover,
+        &.has-info-color:hover,
+        &.has-warning-color:hover {
+            color: var(--wp--preset--color--neutral) !important;
+        }
 
-/* Block Style: Outline
---------------------------------------------- */
+        &:hover,
+        &.has-primary-color:hover {
+            background-color: var(--wp--preset--color--primary) !important;
+            border-color: var(--wp--preset--color--primary);
+        }
 
-/*
- * This forces buttons with outline styling to inherit the color of the button.
- * This is needed due to our button styling in theme.json.
- */
-.wp-block-button.is-style-outline .wp-block-button__link {
-    border-color: inherit;
-}
+        &.has-secondary-color:hover {
+            background-color: var(--wp--preset--color--secondary) !important;
+            border-color: var(--wp--preset--color--secondary);
+        }
 
-.wp-block-button.is-style-outline .wp-block-button__link:hover,
-.wp-block-button.is-style-outline .wp-block-button__link.has-primary-color:hover {
-    background-color: var(--wp--preset--color--primary) !important;
-    border-color: var(--wp--preset--color--primary);
-    color: var(--wp--preset--color--neutral) !important;
-}
+        &.has-tertiary-color:hover {
+            background-color: var(--wp--preset--color--tertiary) !important;
+            border-color: var(--wp--preset--color--tertiary);
+        }
 
-.wp-block-button.is-style-outline .wp-block-button__link.has-secondary-color:hover {
-    background-color: var(--wp--preset--color--secondary) !important;
-    border-color: var(--wp--preset--color--secondary);
-    color: var(--wp--preset--color--neutral) !important;
-}
+        &.has-accent-color:hover {
+            background-color: var(--wp--preset--color--accent) !important;
+            border-color: var(--wp--preset--color--accent);
+        }
 
-.wp-block-button.is-style-outline .wp-block-button__link.has-tertiary-color:hover {
-    background-color: var(--wp--preset--color--tertiary) !important;
-    border-color: var(--wp--preset--color--tertiary);
-    color: var(--wp--preset--color--neutral) !important;
-}
+        &.has-info-color:hover {
+            background-color: var(--wp--preset--color--info) !important;
+            border-color: var(--wp--preset--color--info);
+        }
 
-.wp-block-button.is-style-outline .wp-block-button__link.has-accent-color:hover {
-    background-color: var(--wp--preset--color--accent) !important;
-    border-color: var(--wp--preset--color--accent);
-    color: var(--wp--preset--color--neutral) !important;
-}
+        &.has-warning-color:hover {
+            background-color: var(--wp--preset--color--warning) !important;
+            border-color: var(--wp--preset--color--warning);
+        }
 
-.wp-block-button.is-style-outline .wp-block-button__link.has-info-color:hover {
-    background-color: var(--wp--preset--color--info) !important;
-    border-color: var(--wp--preset--color--info);
-    color: var(--wp--preset--color--neutral) !important;
-}
-
-.wp-block-button.is-style-outline .wp-block-button__link.has-warning-color:hover {
-    background-color: var(--wp--preset--color--warning) !important;
-    border-color: var(--wp--preset--color--warning);
-    color: var(--wp--preset--color--neutral) !important;
-}
-
-.wp-block-button.is-style-outline .wp-block-button__link.has-neutral-color:hover {
-    background-color: var(--wp--preset--color--neutral) !important;
-    border-color: var(--wp--preset--color--neutral);
-    color: var(--wp--preset--color--primary) !important;
+        &.has-neutral-color:hover {
+            background-color: var(--wp--preset--color--neutral) !important;
+            border-color: var(--wp--preset--color--neutral);
+            color: var(--wp--preset--color--primary) !important;
+        }
+    }
 }
