--- a/src/blocks/core/image.scss
+++ b/src/blocks/core/image.scss
@@ -1,77 +1,86 @@
-/* Image Block
------------------------------------------------------------------------------ */
+/* Image
+ ----------------------------------------------------------------------------- */
 
-/* General Styles
---------------------------------------------- */
+.wp-block-image {
+    &> figcaption {
+        text-align: center;
+    }
 
-.wp-block-image > figcaption {
-    text-align: center;
+    /* Custom classes for box shadows.
+     --------------------------------------------- */
+
+    &.box-shadow--default {
+        box-shadow: none !important;
+    
+        img {
+            box-shadow: var(--wp--custom--box-shadow--default);
+        }
+    } 
+    
+    &.box-shadow--minimal {
+        box-shadow: none !important;
+        
+        img {
+            box-shadow: var(--wp--custom--box-shadow--minimal);
+        }
+    }
+
+    /* Block Style: Caption right/left
+     --------------------------------------------- */
+
+    @media (min-width: 1350px) {
+        &.is-style-caption-left,
+        &.is-style-caption-right {
+            position: relative;
+
+            &.alignfull,
+            &.alignwide {
+                &> figcaption {
+                    max-width: unset;
+                    padding-left: var(--wp--style--block-gap);
+                    padding-right: var(--wp--style--block-gap);
+                    position: unset;
+                }
+            }
+
+            &> figcaption {
+                bottom: var(--wp--style--block-gap);
+                max-width: clamp(10rem, 10vw, 14rem);
+                position: absolute;
+                width: 100%;
+            }
+        }
+
+        &.is-style-caption-right {
+            &> figcaption {
+                right: calc(-1 * clamp(10rem, 10vw, 14rem) - var(--wp--style--block-gap));
+                text-align: left;
+            }
+        }
+
+        &.is-style-caption-left {
+            &> figcaption {
+                left: calc(-1 * clamp(10rem, 10vw, 14rem) - var(--wp--style--block-gap));
+                text-align: right;
+            }
+        }
+    }
 }
 
-/* Override editor styles that are not present on the frontend */
-.editor-styles-wrapper .wp-block-image {
-    line-height: 0;
-    margin-bottom: 0 !important;
-}
-
-/* Block Style: Caption right/left
---------------------------------------------- */
-@media (min-width: 1350px) {
-    .wp-block-image.is-style-caption-left,
-    .wp-block-image.is-style-caption-right {
-        position: relative;
+// Editor overrides due to inconsistent markup.
+.editor-styles-wrapper {
+    // Override editor styles that are not present on the frontend.
+    .wp-block-image {
+        line-height: 0;
+        margin-bottom: 0 !important;
     }
 
-    .wp-block-image.is-style-caption-left > figcaption,
-    .wp-block-image.is-style-caption-right > figcaption {
-        bottom: var(--wp--style--block-gap);
-        max-width: 13rem;
-        max-width: clamp(10rem, 10vw, 14rem);
-        position: absolute;
-        width: 100%;
-    }
-
-    .wp-block-image.is-style-caption-right > figcaption {
-        right: calc(-1 * clamp(10rem, 10vw, 14rem) - var(--wp--style--block-gap));
-        text-align: left;
-    }
-
-    .wp-block-image.is-style-caption-left > figcaption {
-        left: calc(-1 * clamp(10rem, 10vw, 14rem) - var(--wp--style--block-gap));
-        text-align: right;
-    }
-
+    // Images are wrapped in an alignment div in the Editor. 
     [data-align="full"] > .wp-block-image.is-style-caption-right > figcaption,
-    .wp-block-image.alignfull.is-style-caption-right > figcaption,
-    [data-align="full"] > .wp-block-image.is-style-caption-left > figcaption,
-    .wp-block-image.alignfull.is-style-caption-left > figcaption {
+    [data-align="full"] > .wp-block-image.is-style-caption-left > figcaption {
         max-width: unset;
         padding-left: var(--wp--style--block-gap);
         padding-right: var(--wp--style--block-gap);
         position: unset;
-        text-align: left;
-    }
-
-    [data-align="full"] > .wp-block-image.is-style-caption-right > figcaption,
-    .wp-block-image.alignfull.is-style-caption-right > figcaption {
-        text-align: right;
-    }
-}
-
-/* Custom classes for box shadows.
---------------------------------------------- */
-.wp-block-image.box-shadow--default {
-    box-shadow: none;
-
-    &> img {
-        box-shadow: var(--wp--custom--box-shadow--default);
-    }
-} 
-
-.wp-block-image.box-shadow--minimal {
-    box-shadow: none;
-    
-    &> img {
-        box-shadow: var(--wp--custom--box-shadow--minimal);
     }
 }
