--- a/src/blocks/core/latest-comments.scss
+++ b/src/blocks/core/latest-comments.scss
@@ -1,14 +1,14 @@
-/* Latest Comments Block
------------------------------------------------------------------------------ */
+/* Latest Comments
+ ----------------------------------------------------------------------------- */
 
-/* General Styles
---------------------------------------------- */
-.wp-block-latest-comments__comment-date {
-    color: var(--wp--preset--color--primary-light);
-    font-weight: 500;
-    font-family: var(--wp--preset--font-family--primary);
-    font-size: var(--wp--preset--font-size--tiny);
-    letter-spacing: 1px;
-    margin-top: 0.5rem;
-    text-transform: uppercase;
+.wp-block-latest-comments {
+    .wp-block-latest-comments__comment-date {
+        color: var(--wp--preset--color--primary-light);
+        font-weight: 500;
+        font-family: var(--wp--preset--font-family--primary);
+        font-size: var(--wp--preset--font-size--x-small);
+        letter-spacing: 1px;
+        margin-top: 0.5rem;
+        text-transform: uppercase;
+    }
 }
