--- a/src/blocks/core/latest-posts.scss
+++ b/src/blocks/core/latest-posts.scss
@@ -1,26 +1,25 @@
-/* Latest Posts Block
------------------------------------------------------------------------------ */
+/* Latest Posts
+ ----------------------------------------------------------------------------- */
 
-/* General Styles
---------------------------------------------- */
-.wp-block-latest-posts__featured-image img {
-    border-radius: var(--wp--custom--border-radius--default);
-}
+.wp-block-latest-posts {
+    // The post title is missing a class so need to target this way.
+    li > a {
+        display: block;
+    }
+    .wp-block-latest-posts__featured-image img {
+        border-radius: var(--wp--custom--border-radius--default);
+    }
 
-/* The post title is missing a class so need to target this way. */
-.wp-block-latest-posts li > a {
-     display: block;
- }
-
-.wp-block-latest-posts__post-author,
-.wp-block-latest-posts__post-date {
-    color: var(--wp--preset--color--primary-light);
-    display: inline-block;
-    font-weight: 500;
-    font-family: var(--wp--preset--font-family--primary);
-    font-size: var(--wp--preset--font-size--tiny);
-    letter-spacing: 1px;
-    margin-top: 0.5rem;
-    margin-right: 1rem;
-    text-transform: uppercase;
+    .wp-block-latest-posts__post-author,
+    .wp-block-latest-posts__post-date {
+        color: var(--wp--preset--color--primary-light);
+        display: inline-block;
+        font-weight: 500;
+        font-family: var(--wp--preset--font-family--primary);
+        font-size: var(--wp--preset--font-size--x-small);
+        letter-spacing: 1px;
+        margin-top: 0.5rem;
+        margin-right: 1rem;
+        text-transform: uppercase;
+    }
 }
