--- a/src/blocks/core/media-text.scss
+++ b/src/blocks/core/media-text.scss
@@ -1,19 +1,20 @@
-/* Media & Text Block
------------------------------------------------------------------------------ */
+/* Media & Text
+ ----------------------------------------------------------------------------- */
 
-/* General Styles
---------------------------------------------- */
+.wp-block-media-text {
 
-/* Improve spacing on Media & Text blocks. */
-.wp-block-media-text .wp-block-media-text__content {
-    padding: clamp(var(--wp--style--block-gap), 8%, calc(2*var(--wp--style--block-gap)));
-}
+    // Improve spacing on Media & Text blocks.
+    .wp-block-media-text__content {
+        padding: clamp(var(--wp--style--block-gap), 8%, calc(2*var(--wp--style--block-gap)));
+    }
 
+    /* Block Style: Remove Content Padding
+     * (Not exposed in the UI. Useful when padding is controlled with group block.)
+     --------------------------------------------- */
 
-/* Block Style: Remove Content Padding
-* (Not exposed in the UI. Useful when padding is controlled with group block.)
---------------------------------------------- */
-
-.wp-block-media-text.is_style_no_content_margin .wp-block-media-text__content {
-    padding: 0;
+    &.is_style_no_content_margin {
+        .wp-block-media-text__content {
+            padding: 0;
+        }
+    } 
 }
