--- a/src/blocks/core/navigation.scss
+++ b/src/blocks/core/navigation.scss
@@ -1,10 +1,12 @@
-/* Navigation Block
------------------------------------------------------------------------------ */
+/* Navigation
+ ----------------------------------------------------------------------------- */
 
-/* General Styles
---------------------------------------------- */
+.wp-block-navigation {
 
-/* Ensure carrot icons are vertically centered */ 
-.wp-block-navigation .wp-block-navigation__submenu-icon svg {
-    margin-top: 0;
+    // Ensure carrot icons are vertically centered.
+    .wp-block-navigation__submenu-icon {
+        svg {
+            margin-top: 0;
+        }
+    }
 }
