--- a/src/blocks/core/post-excerpt.scss
+++ b/src/blocks/core/post-excerpt.scss
@@ -1,18 +1,15 @@
-/* Post Excerpt Block
------------------------------------------------------------------------------ */
+/* Post Excerpt
+ ----------------------------------------------------------------------------- */
 
-/* General Styles
---------------------------------------------- */
+// The Post Excerpt block does not support blockGap, so let's fix that.
+.wp-block-post-excerpt { 
+    &> * {
+        margin-block-start: 0;
+        margin-block-end: 0;
+    }
 
-/*
- * The Post Excerpt block does not support blockGap, so let's fix that.
- */
-.wp-block-post-excerpt > * {
-    margin-block-start: 0;
-    margin-block-end: 0;
-}
-
-.wp-block-post-excerpt > * + * {
-    margin-block-start: var(--wp--style--block-gap);
-    margin-block-end: 0;
+    &> * + * {
+        margin-block-start: var(--wp--style--block-gap);
+        margin-block-end: 0;
+    }
 }
