--- a/src/blocks/core/quote.scss
+++ b/src/blocks/core/quote.scss
@@ -6,22 +6,58 @@
     border-bottom: 2px solid var(--wp--preset--color--secondary);
     border-left: 0;
     padding: 1.5rem 0 2rem 0;
-}
 
-.wp-block-quote p {
-    margin: 0;
-}
+    p {
+        margin: 0;
+    }
 
-.wp-block-quote cite {
-	color: currentColor;
-    display: inline-block;
-    font-weight: 500;
-	font-size: var(--wp--preset--font-size--tiny);
-	letter-spacing: 1px;
-    line-height: 1;
-    margin-top: 1.5rem;
-    opacity: .6;
-    text-transform: uppercase;
+    cite {
+        color: currentColor;
+        display: inline-block;
+        font-weight: 500;
+        font-size: var(--wp--preset--font-size--x-small);
+        letter-spacing: 1px;
+        line-height: 1;
+        margin-top: 1.5rem;
+        opacity: .6;
+        text-transform: uppercase;
+    }
+
+    /* Block Style: Plain
+     --------------------------------------------- */
+
+    &.is-style-plain {
+        padding: 0;
+    }
+
+    /* Block Style: Fancy
+     --------------------------------------------- */
+
+    &.is-style-fancy {
+        border: 0;
+        padding: 3.5rem 0 0.5rem 0;
+        position: relative;
+
+        &:before {
+            color: var(--wp--preset--color--secondary);
+            content: "“";
+            font-size: 6rem;
+            font-style: italic;
+            font-weight: 600;
+            line-height: 0;
+            position: absolute;
+            top: 3rem;
+            left: calc(50% - 2.75rem);
+        }
+
+        @media ( min-width: 600px ) {
+            padding: 1rem 0 0.5rem 3.25rem;
+    
+            &:before {
+                left: -0.5rem;
+            }
+        }
+    }
 }
 
 @media (min-width: 600px) {
@@ -30,58 +66,14 @@
         margin-top: calc(1.5 * var(--wp--style--block-gap));
         margin-bottom: calc(1.5 * var(--wp--style--block-gap));
     }
-
-    .wp-block-quote {
-        border-top: 0;
-        border-bottom: 0;
-        border-left: 2px solid var(--wp--preset--color--secondary);
-        padding: 0.5rem 0 0.5rem 2rem;
-    }
 }
 
-/* If contained in a block with a background color, default to currentColor */
+// If contained in a block with a background color, default to currentColor.
 .has-background .wp-block-quote {
     border-color: currentColor;
 }
 
-/* Block Style: Plain
---------------------------------------------- */
-.wp-block-quote.is-style-plain {
-    padding: 0;
-}
-
-/* Block Style: Fancy
---------------------------------------------- */
-
-.wp-block-quote.is-style-fancy {
-    border: 0;
-    padding: 3.5rem 0 0.5rem 0;
-    position: relative;
-}
-
-.wp-block-quote.is-style-fancy:before {
-    color: var(--wp--preset--color--secondary);
-    content: "“";
-    font-size: 6rem;
-    font-style: italic;
-    font-weight: 600;
-    line-height: 0;
-    position: absolute;
-    top: 3rem;
-    left: calc(50% - 2.75rem);
-}
-
-@media ( min-width: 600px ) {
-    .wp-block-quote.is-style-fancy {
-        padding: 1rem 0 0.5rem 3.25rem;
-    }
-
-    .wp-block-quote.is-style-fancy:before {
-        left: -0.5rem;
-    }
-}
-
-/* If contained in a block with a background color, default to currentColor */
+// If contained in a block with a background color, default to currentColor.
 .has-background .wp-block-quote.is-style-fancy:before {
     color: currentColor;
     opacity: 0.4;
