--- a/src/blocks/core/separator.scss
+++ b/src/blocks/core/separator.scss
@@ -1,54 +1,50 @@
 /* Separator
------------------------------------------------------------------------------ */
-
-/* General Styles
---------------------------------------------- */
+ ----------------------------------------------------------------------------- */
 
 .wp-block-separator {
-    opacity: 1;
-}
+    
+    /* Block Style: Wide
+     --------------------------------------------- */
 
-/* Block Style: Wide
---------------------------------------------- */
+    // This fixes the block style "collapsing" in Row blocks.
+    &.is-style-wide {
+        flex-grow: 1;
+    }
 
-/* This fixes the block style "collapsing" in Row blocks. */
-.wp-block-separator.is-style-wide {
-    flex-grow: 1;
-}
+    /* Block Style: Dots
+     --------------------------------------------- */
 
-/* Block Style: Dots
---------------------------------------------- */
+    &.is-style-dots {
+        line-height: 0.25;
 
-.wp-block-separator.is-style-dots {
-    line-height: 0.25;
-}
+        &:before {
+            font-size: 2rem;
+            letter-spacing: 1rem;
+            padding-left: 1rem;
+        }
+    }
 
-.wp-block-separator.is-style-dots:before {
-    font-size: 2rem;
-    letter-spacing: 1rem;
-    padding-left: 1rem;
-}
+    /* Block Style: Waves
+     --------------------------------------------- */
 
-/* Block Style: Waves
---------------------------------------------- */
+    &.is-style-waves {
+        background-color: unset !important;
+        border: 0;
+        height: 12px !important;
+        width: 100% !important;
 
-.wp-block-separator.is-style-waves {
-    background-color: unset !important;
-    border: 0;
-    height: 12px !important;
-    width: 100% !important;
-}
-
-.wp-block-separator.is-style-waves:after {
-    background-color: currentColor;
-    content: "";
-    display: block;
-    height: 100%;
-    width: 100%;
-    -webkit-mask-image: url( '../../images/waves-2px.svg' );
-    mask-image: url( '../../images/waves-2px.svg' );
-    -webkit-mask-position: center;
-    mask-position: center;
-    -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;
+        &:after {
+            background-color: currentColor;
+            content: "";
+            display: block;
+            height: 100%;
+            width: 100%;
+            -webkit-mask-image: url( '../../images/waves-2px.svg' );
+            mask-image: url( '../../images/waves-2px.svg' );
+            -webkit-mask-position: center;
+            mask-position: center;
+            -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+        }
+    }
 }
