--- a/src/blocks/core/template-part.scss
+++ b/src/blocks/core/template-part.scss
@@ -1,13 +1,13 @@
 /* Template Part
------------------------------------------------------------------------------ */
+ ----------------------------------------------------------------------------- */
 
-/* General Styles
---------------------------------------------- */
+.wp-block-template-part {
 
-/*
- * Disable margin (blockGap) on footer template parts. Needed until template
- * parts get more dimension controls.
- */
-footer.wp-block-template-part {
-	margin-top: 0 !important;
+	/*
+	 * Disable margin (blockGap) on footer template parts. Needed until template
+	 * parts get more dimension controls.
+	 */
+	&footer {
+		margin-top: 0 !important;
+	}
 }
