--- a/templates/page.html
+++ b/templates/page.html
@@ -1,15 +1,9 @@
-<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"nautilus","tagName":"header"} /-->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"}}}} -->
-<main class="wp-block-group" style="margin-top:0">
-
-    <!-- wp:post-content {"layout":{"inherit":true}} /-->
-
-    <!-- wp:spacer {"height":"6rem"} -->
-    <div style="height:6rem" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}}} -->
+<main class="wp-block-group" style="margin-top:0;margin-bottom:0">
+    <!-- wp:post-content {"layout":{"type":"constrained"}} /-->
 </main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
+<!-- wp:template-part {"slug":"footer","theme":"nautilus","tagName":"footer"} /-->
