--- a/templates/single.html
+++ b/templates/single.html
@@ -1,93 +1,115 @@
-<!-- wp:cover {"useFeaturedImage":true,"minHeight":33,"minHeightUnit":"vh","contentPosition":"bottom center","isDark":false,"className":"p-sm mt-0 featured-image","style":{"color":{"duotone":["#004D98","#dbffff"]}}} -->
-<div class="wp-block-cover is-light has-custom-content-position is-position-bottom-center p-sm mt-0 featured-image" style="min-height:33vh"><span aria-hidden="true" class="wp-block-cover__background has-background-dim-50 has-background-dim"></span><div class="wp-block-cover__inner-container">
+<!-- wp:template-part {"slug":"header","theme":"nautilus","tagName":"header"} /-->
 
-        <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
+<!-- wp:group {"layout":{"contentSize":"720px","wideSize":"960px","type":"constrained"},"style":{"spacing":{"blockGap":"var:preset|spacing|x-large","margin":{"top":"var:preset|spacing|xx-large","bottom":"var:preset|spacing|x-large"}}}} -->
+<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--xx-large);margin-bottom:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
+<div class="wp-block-group"><!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"},"style":{"spacing":{"blockGap":"var:preset|spacing|small"},"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"x-small"} -->
+<div class="wp-block-group has-x-small-font-size" style="font-style:normal;font-weight:500"><!-- wp:post-terms {"term":"category","style":{"typography":{"fontWeight":"500","letterSpacing":"0.5px","textTransform":"uppercase","lineHeight":"1"}}} /-->
 
-        <!-- wp:spacer {"height":"20vh"} -->
-        <div style="height:20vh" aria-hidden="true" class="wp-block-spacer"></div>
-        <!-- /wp:spacer -->
+<!-- wp:paragraph {"textColor":"neutral-300","fontSize":"tiny"} -->
+<p class="has-neutral-300-color has-text-color has-tiny-font-size">|</p>
+<!-- /wp:paragraph -->
 
-		<!-- wp:group {"layout":{"inherit":true}} -->
-		<div class="wp-block-group">
-			<!-- wp:post-title {"textAlign":"center","level":1,"align":"wide","fontSize":"xx-large"} /-->
-
-			<!-- wp:group {"align":"wide","style":{"spacing":{"padding":{"bottom":"var(\u002d\u002dwp\u002d\u002dcustom\u002d\u002dspacing\u002d\u002dsmall, 1.25rem)"}}},"layout":{"type":"flex","allowOrientation":false,"justifyContent":"center"}} -->
-			<div class="wp-block-group alignwide"
-				style="padding-bottom:var(--wp--custom--spacing--small, 1.25rem)">
-				<!-- wp:post-date {"textColor":"accent-alt","fontSize":"small"} /-->
-			</div>
-			<!-- /wp:group -->
-		</div>
-		<!-- /wp:group -->
-</div></div><!-- /wp:cover -->
-
-<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
-
-<!-- wp:cover {"useFeaturedImage":true,"dimRatio":50,"overlayColor":"secondary"} -->
-<div class="wp-block-cover">
-    <span aria-hidden="true" class="wp-block-cover__background has-secondary-background-color has-background-dim"></span>
-    <div class="wp-block-cover__inner-container"><!-- wp:paragraph {"align":"center","placeholder":"Write title…","fontSize":"large"} -->
-<p class="has-text-align-center has-large-font-size">Hello there</p>
-<!-- /wp:paragraph --></div></div>
-<!-- /wp:cover -->
-
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"}}}} -->
-<main class="wp-block-group" style="margin-top:0">
-
-    <!-- wp:group {"layout":{"contentSize": "720px","wideSize": "960px"},"style":{"spacing":{"blockGap":"3rem","margin":{"top":"4rem","bottom":"3rem"}}}} -->
-    <div class="wp-block-group" style="margin-top:4rem;margin-bottom:3rem">
-
-        <!-- wp:group -->
-        <div class="wp-block-group">
-
-            <!-- wp:group {"style":{"spacing":{"blockGap":"0.75rem"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"}} -->
-            <div class="wp-block-group">
-
-                <!-- wp:post-terms {"term":"category","fontSize":"x-small","style":{"typography":{"fontWeight":"500","letterSpacing":"1px","textTransform":"uppercase","lineHeight":"1"}}} /-->
-
-                <!-- wp:paragraph {"textColor":"neutral-300","fontSize":"x-small","fontFamily":"source-sans"} -->
-                <p class="has-neutral-300-color has-x-small-font-size has-source-sans-font-family">|</p>
-                <!-- /wp:paragraph -->
-
-                <!-- wp:post-date {"format":"F j, Y","style":{"typography":{"letterSpacing":"1px","textTransform":"uppercase","fontWeight":"500","lineHeight":"1"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"x-small"} /-->
-
-            </div>
-            <!-- /wp:group -->
-
-            <!-- wp:post-title {"level":1} /-->
-
-        </div>
-        <!-- /wp:group -->
-
-        <!-- wp:post-featured-image {"align":"wide"} /-->
-
-    </div>
-    <!-- /wp:group -->
-
-    <!-- wp:post-content {"layout":{"contentSize": "720px","wideSize": "960px"}} /-->
-
-    <!-- wp:group {"style":{"spacing":{"margin":{"top":"3rem"}}},"layout":{"inherit":true}} -->
-    <div class="wp-block-group" style="margin-top:3rem">
-        <!-- wp:separator {"color":"neutral-300","className":"is-style-wide"} -->
-        <hr class="wp-block-separator has-text-color has-background has-neutral-300-background-color has-neutral-300-color is-style-wide"/>
-        <!-- /wp:separator -->
-
-        <!-- wp:group {"layout":{"type":"flex","allowOrientation":false,"justifyContent":"space-between"}} -->
-        <div class="wp-block-group">
-            <!-- wp:post-terms {"term":"category","separator":"","className":"is-style-outline","fontSize":"x-small"} /-->
-            <!-- wp:post-terms {"term":"post_tag","separator":"   |   ","fontSize":"x-small"} /-->
-        </div>
-        <!-- /wp:group -->
-    </div>
-    <!-- /wp:group -->
-
-    <!-- wp:group {"style":{"spacing":{"margin":{"top":"4rem","bottom":"4rem"}}},"layout":{"inherit":true}} -->
-    <div class="wp-block-group" style="margin-top:4rem;margin-bottom:4rem">
-        <!-- wp:post-comments /-->
-    </div>
-    <!-- /wp:group -->
-
-</main>
+<!-- wp:post-date {"format":"F j, Y","displayType":"modified","style":{"typography":{"letterSpacing":"0.5px","textTransform":"uppercase","fontWeight":"500","lineHeight":"1"}},"textColor":"primary-light","className":"no-flex-shrink"} /--></div>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
+<!-- wp:post-title {"level":1} /--></div>
+<!-- /wp:group -->
+
+<!-- wp:post-featured-image {"align":"wide"} /--></div>
+<!-- /wp:group -->
+
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}}} -->
+<main class="wp-block-group" style="margin-top:0;margin-bottom:0"><!-- wp:post-content {"layout":{"type":"constrained","contentSize":"720px","wideSize":"960px"}} /--></main>
+<!-- /wp:group -->
+
+<!-- wp:group {"layout":{"type":"constrained"},"style":{"spacing":{"margin":{"top":"var:preset|spacing|xx-large","bottom":"var:preset|spacing|x-large"}}}} -->
+<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--xx-large);margin-bottom:var(--wp--preset--spacing--x-large)"><!-- wp:group {"layout":{"type":"flex","allowOrientation":false,"justifyContent":"space-between"}} -->
+<div class="wp-block-group"><!-- wp:post-terms {"term":"category","separator":"","className":"is-style-outline","fontSize":"x-small"} /-->
+
+<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"},"style":{"spacing":{"blockGap":"var:preset|spacing|x-small"}}} -->
+<div class="wp-block-group"><!-- wp:paragraph {"style":{"typography":{"fontStyle":"normal","fontWeight":"500","letterSpacing":"0.5px","textTransform":"uppercase"},"spacing":{"margin":{"top":"2px"}}},"textColor":"primary-light","fontSize":"x-small","fontFamily":"primary"} -->
+<p class="has-primary-light-color has-text-color has-primary-font-family has-x-small-font-size" style="margin-top:2px;font-style:normal;font-weight:500;letter-spacing:0.5px;text-transform:uppercase">Share:</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:outermost/social-sharing {"iconColor":"primary","iconColorValue":"#0F172A","size":"has-small-icon-size","className":"is-style-logos-only","style":{"spacing":{"blockGap":"var:preset|spacing|x-small"}}} -->
+<ul class="wp-block-outermost-social-sharing has-small-icon-size has-icon-color is-style-logos-only"><!-- wp:outermost/social-sharing-link {"service":"facebook"} /-->
+
+<!-- wp:outermost/social-sharing-link {"service":"twitter"} /-->
+
+<!-- wp:outermost/social-sharing-link {"service":"linkedin"} /--></ul>
+<!-- /wp:outermost/social-sharing --></div>
+<!-- /wp:group --></div>
+<!-- /wp:group --></div>
+<!-- /wp:group -->
+
+<!-- wp:group {"layout":{"inherit":true,"type":"constrained"},"style":{"spacing":{"margin":{"top":"var:preset|spacing|xxx-large"}}}} -->
+<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--xxx-large)"><!-- wp:comments -->
+<div class="wp-block-comments"><!-- wp:comments-title {"textAlign":"left","showPostTitle":false,"showCommentsCount":false,"style":{"spacing":{"margin":{"top":"0","right":"0","bottom":"var:preset|spacing|large","left":"0"}}}} /-->
+
+<!-- wp:comment-template -->
+<!-- wp:columns {"style":{"spacing":{"blockGap":"var:preset|spacing|small","margin":{"top":"var:preset|spacing|large","bottom":"var:preset|spacing|large"}}}} -->
+<div class="wp-block-columns" style="margin-top:var(--wp--preset--spacing--large);margin-bottom:var(--wp--preset--spacing--large)"><!-- wp:column {"width":"40px","style":{"spacing":{}}} -->
+<div class="wp-block-column" style="flex-basis:40px"><!-- wp:avatar {"size":40,"style":{"border":{"radius":"20px"}}} /--></div>
+<!-- /wp:column -->
+
+<!-- wp:column {"style":{"spacing":{"padding":{"bottom":"var:preset|spacing|medium"}},"border":{"bottom":{"color":"var:preset|color|neutral-300","width":"1px"}}}} -->
+<div class="wp-block-column" style="border-bottom-color:var(--wp--preset--color--neutral-300);border-bottom-width:1px;padding-bottom:var(--wp--preset--spacing--medium)"><!-- wp:comment-author-name {"isLink":false,"style":{"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"medium","fontFamily":"primary"} /-->
+
+<!-- wp:group {"layout":{"type":"flex"},"style":{"spacing":{"blockGap":"var:preset|spacing|small","margin":{"top":"0","bottom":"0"}},"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"x-small"} -->
+<div class="wp-block-group has-x-small-font-size" style="margin-top:0;margin-bottom:0;font-style:normal;font-weight:500"><!-- wp:comment-date {"isLink":false,"style":{"typography":{"textTransform":"uppercase","letterSpacing":"0.5px"}},"textColor":"primary-light","fontFamily":"primary"} /-->
+
+<!-- wp:comment-edit-link {"fontFamily":"primary"} /--></div>
+<!-- /wp:group -->
+
+<!-- wp:comment-content {"fontSize":"small"} /-->
+
+<!-- wp:comment-reply-link {"style":{"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"small","fontFamily":"primary"} /--></div>
+<!-- /wp:column --></div>
+<!-- /wp:columns -->
+<!-- /wp:comment-template -->
+
+<!-- wp:spacer {"height":"2rem"} -->
+<div style="height:2rem" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
+
+<!-- wp:post-comments-form /--></div>
+<!-- /wp:comments --></div>
+<!-- /wp:group -->
+
+<!-- wp:group {"layout":{"type":"constrained"},"align":"wide","style":{"spacing":{"margin":{"top":"var:preset|spacing|xxx-large","bottom":"var:preset|spacing|xxx-large"}}}} -->
+<div class="wp-block-group alignwide" style="margin-top:var(--wp--preset--spacing--xxx-large);margin-bottom:var(--wp--preset--spacing--xxx-large)"><!-- wp:query {"queryId":7,"query":{"perPage":"3","pages":"1","offset":"0","postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false,"taxQuery":null},"displayLayout":{"type":"flex","columns":3},"align":"wide","className":"is-style-2x-gap","layout":{"type":"default"}} -->
+<div class="wp-block-query alignwide is-style-2x-gap"><!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"},"align":"wide","style":{"spacing":{"margin":{"bottom":"var:preset|spacing|large"}}}} -->
+<div class="wp-block-group alignwide" style="margin-bottom:var(--wp--preset--spacing--large)"><!-- wp:heading {"align":"wide"} -->
+<h2 class="alignwide">Latest Articles</h2>
+<!-- /wp:heading -->
+
+<!-- wp:outermost/icon-block {"iconName":"wordpress-heading","iconColor":"secondary","iconColorValue":"#0B8082"} -->
+<div class="wp-block-outermost-icon-block items-justified-undefined"><div class="icon-container has-icon-color" style="color:#0B8082;width:48px"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true"><path d="M6.2 5.2v13.4l5.8-4.8 5.8 4.8V5.2z"></path></svg></div></div>
+<!-- /wp:outermost/icon-block --></div>
+<!-- /wp:group -->
+
+<!-- wp:post-template -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|large","right":"var:preset|spacing|x-large","bottom":"var:preset|spacing|large","left":"var:preset|spacing|x-large"}}},"backgroundColor":"white","className":"is-style-hover-box"} -->
+<div class="wp-block-group is-style-hover-box has-white-background-color has-background" style="padding-top:var(--wp--preset--spacing--large);padding-right:var(--wp--preset--spacing--x-large);padding-bottom:var(--wp--preset--spacing--large);padding-left:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
+<div class="wp-block-group"><!-- wp:post-date {"format":"F j, Y","style":{"typography":{"textTransform":"uppercase","fontWeight":"500","lineHeight":"1","fontStyle":"normal","letterSpacing":"0.5px"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"x-small"} /-->
+
+<!-- wp:post-title {"isLink":true,"style":{"typography":{"fontSize":"1.75rem"}}} /-->
+
+<!-- wp:post-excerpt {"moreText":"","showMoreOnNewLine":false,"style":{"typography":{"fontSize":"1.125rem"}}} /--></div>
+<!-- /wp:group -->
+
+<!-- wp:read-more {"content":"Continue Reading →","style":{"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"small"} /--></div>
+<!-- /wp:group -->
+<!-- /wp:post-template -->
+
+<!-- wp:query-no-results -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"3rem","right":"3rem","bottom":"3rem","left":"3rem"}}},"backgroundColor":"white","className":"box-shadow\u002d\u002dminimal"} -->
+<div class="wp-block-group box-shadow--minimal has-white-background-color has-background" style="padding-top:3rem;padding-right:3rem;padding-bottom:3rem;padding-left:3rem"><!-- wp:paragraph {"align":"center"} -->
+<p class="has-text-align-center">Well this doesn't look right! No posts could be found.</p>
+<!-- /wp:paragraph --></div>
+<!-- /wp:group -->
+<!-- /wp:query-no-results --></div>
+<!-- /wp:query --></div>
+<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","theme":"nautilus","tagName":"footer"} /-->
